@@ -30,6 +30,7 @@
 	  gtkui to shutdown the currently connected daemon.
 	* Fix #594 tray password dialog freeze in Windows
 	* Made the password dialog prettier
+	* Fix #1086 deprecated gtk.Tooltips usage
 
 ==== Console ====
 	* Fix using the console in Windows, but only in command-line mode
